--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 ###> symfony/framework-bundle ###
 /.env.local
 /.env.local.php
@@ -34,3 +33,10 @@ yarn-error.log
 /public/media/cache/
 ###< liip/imagine-bundle ###
 /config/graphql
+
+###> friendsofphp/php-cs-fixer ###
+/.php-cs-fixer.php
+/.php-cs-fixer.cache
+###< friendsofphp/php-cs-fixer ###
+/.php_cs.cache
+/.php-cs-fixer.dist.php
