--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,7 @@
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
+        "ezsystems/ezplatform-code-style": "^1.0",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "^5.2",
         "symfony/css-selector": "^5.2",
@@ -77,6 +78,7 @@
         "symfony/polyfill-php72": "*"
     },
     "scripts": {
+        "fix-cs": "php-cs-fixer fix -v --show-progress=dots",
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
             "assets:install %PUBLIC_DIR%": "symfony-cmd",
