--- a/composer.json
+++ b/composer.json
@@ -64,7 +64,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "App\\": "src/",
+            "Acme\\": "acme/"
         }
     },
     "autoload-dev": {
