--- a/config/packages/acme.yaml
+++ b/config/packages/acme.yaml
@@ -11,3 +11,14 @@ acme_example:
                 string: value
                 number: 123
                 enabled: false
+
+services:
+    _defaults:
+        autowire: true      # Automatically injects dependencies in your services.
+        autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+        bind:
+            $siteAccessService: '@ezpublish.siteaccess_service'
+
+    Acme\ExampleBundle\Controller\:
+        resource: '../../acme/ExampleBundle/Controller/'
+        tags: [ 'controller.service_arguments' ]
