--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,3 @@
 index:
     path: /hello
-    controller: App\Controller\AppController::helloAction
+    controller: Acme\ExampleBundle\Controller\AcmeController::helloAction
